(INCOMPLETE) New SideBar Design

--- a/web/package.json
+++ b/web/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@codemirror/state": "^6.2.1",
     "@reduxjs/toolkit": "^1.9.5",
     "@uiw/codemirror-extensions-langs": "^4.21.7",
     "@uiw/codemirror-theme-dracula": "^4.21.7",
