--- a/web/package.json
+++ b/web/package.json
@@ -20,6 +20,7 @@
     "boxicons": "^2.1.4",
     "codemirror": "^6.0.1",
     "framer-motion": "^10.12.18",
+    "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.1",
