--- a/web/package.json
+++ b/web/package.json
@@ -19,6 +19,7 @@
     "@uiw/react-codemirror": "^4.21.7",
     "boxicons": "^2.1.4",
     "codemirror": "^6.0.1",
+    "cookie": "^0.5.0",
     "framer-motion": "^10.12.18",
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
