--- a/web/package.json
+++ b/web/package.json
@@ -10,7 +10,6 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@codemirror/history": "^0.19.2",
     "@codemirror/state": "^6.2.1",
     "@reduxjs/toolkit": "^1.9.5",
     "@uiw/codemirror-extensions-langs": "^4.21.7",
@@ -18,6 +17,7 @@
     "@uiw/codemirror-themes": "^4.21.7",
     "@uiw/codemirror-themes-all": "^4.21.7",
     "@uiw/react-codemirror": "^4.21.7",
+    "axios": "^1.4.0",
     "boxicons": "^2.1.4",
     "codemirror": "^6.0.1",
     "cookie": "^0.5.0",
