--- a/web/package.json
+++ b/web/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@codemirror/state": "^6.2.1",
     "@reduxjs/toolkit": "^1.9.5",
+    "@types/react-transition-group": "^4.4.6",
     "@uiw/codemirror-extensions-langs": "^4.21.7",
     "@uiw/codemirror-theme-dracula": "^4.21.7",
     "@uiw/codemirror-themes": "^4.21.7",
@@ -26,7 +27,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.1",
-    "react-router-dom": "^6.14.0"
+    "react-router-dom": "^6.14.0",
+    "react-transition-group": "^4.4.5"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
