--- a/web/package.json
+++ b/web/package.json
@@ -23,6 +23,7 @@
     "codemirror": "^6.0.1",
     "cookie": "^0.5.0",
     "framer-motion": "^10.12.18",
+    "interactjs": "^1.10.17",
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
