--- a/web/package.json
+++ b/web/package.json
@@ -25,6 +25,7 @@
     "framer-motion": "^10.12.18",
     "interactjs": "^1.10.17",
     "js-cookie": "^3.0.5",
+    "nanoid": "^4.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.1",
