--- a/web/package.json
+++ b/web/package.json
@@ -28,6 +28,7 @@
     "nanoid": "^4.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^8.0.7",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.0",
     "react-transition-group": "^4.4.5"
