--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@mui/material": "^5.13.7",
     "@uiw/codemirror-theme-dracula": "^4.21.7",
     "@uiw/react-codemirror": "^4.21.7",
-    "react-responsive": "^9.0.2"
+    "react-responsive": "^9.0.2",
+    "react-syntax-highlighter": "^15.5.0"
   }
 }
