--- a/web/package.json
+++ b/web/package.json
@@ -31,6 +31,7 @@
     "react-markdown": "^8.0.7",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.0",
+    "react-syntax-highlighter": "^15.5.0",
     "react-transition-group": "^4.4.5"
   },
   "devDependencies": {
