--- a/web/package.json
+++ b/web/package.json
@@ -23,14 +23,18 @@
     "codemirror": "^6.0.1",
     "cookie": "^0.5.0",
     "framer-motion": "^10.12.18",
+    "highlight.js": "^11.8.0",
     "interactjs": "^1.10.17",
     "js-cookie": "^3.0.5",
+    "lang-detector": "^1.0.6",
     "nanoid": "^4.0.2",
+    "program-language-detector": "^0.0.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^8.0.7",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.0",
+    "react-select": "^5.7.4",
     "react-syntax-highlighter": "^15.5.0",
     "react-transition-group": "^4.4.5"
   },
@@ -38,6 +42,7 @@
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^4.0.0",
+    "babel-plugin-prismjs": "^2.1.0",
     "eslint": "^8.38.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
