--- a/web/package.json
+++ b/web/package.json
@@ -27,6 +27,7 @@
     "interactjs": "^1.10.17",
     "js-cookie": "^3.0.5",
     "lang-detector": "^1.0.6",
+    "lottie-react": "^2.4.0",
     "nanoid": "^4.0.2",
     "program-language-detector": "^0.0.12",
     "react": "^18.2.0",
